изменения в мобильной версии

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                       </label>
                     </div>
                     <div class="order__form-row">
-                      <input class="order__form-button" name="" type="submit" value="Заказать">
+                      <input class="order__form-button btn" name="" type="submit" value="Заказать">
                       <input class="order__form-button order__form-button_reset" name="" type="reset" value="Очистить">
                     </div>
                   </div>
