изменения по комментариям

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
                         </div>
                     </div>
                 </form> -->
-                <div class="order__form">
-              <form class="order__form-tag" id="order-form">
+            <div class="order__form">
+              <form class="order__form-tag" id="order-form" method="">
                 <div class="order__form-col">
                   <div class="order__form-row order__form-row_double">
                     <label class="order__form-block">
