--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
         <section class="menu section ">
             <h1 class="menu__header section-title">Меню</h1>
             <ul class="menu__nav">
-                <li class="menu__nav-item assortment">
+                <li class="menu__nav-item assortment assortment--active">
                     <div class="assortment__item"style=" background-image:url('image/menu-list-1.png');">
                         <span>Для мясоедов</span>
                     </div>
-                    <div class="assortment__submenu assortment__submenu--active">
+                    <div class="assortment__submenu ">
                         <p class="assortment__submenu-text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует
                         конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно 
                         чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
