--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             <div class="team__content">
                 <h1 class="team__title section-title section-title">Команда</h1>
                 <ul class="team__list">
-                    <li class="team__item personal">
-                            <div class="personal__name personal__name--active">Дэниэль Редклиф</div>
-                            <div class="personal__submenu personal__submenu--active">
+                    <li class="team__item personal personal--active">
+                            <div class="personal__name ">Дэниэль Редклиф</div>
+                            <div class="personal__submenu ">
                                 <div class="personal__avatar">
                                     <img src="image/avatars/team-avatar.png" alt="" class="personal__img">
                                 </div>
@@ -382,7 +382,7 @@
                     </div>
                 </form> -->
             <div class="order__form">
-              <form class="order__form-tag" id="order-form" method="">
+              <form class="order__form-tag" id="order-form" method="GET">
                 <div class="order__form-col">
                   <div class="order__form-row order__form-row_double">
                     <label class="order__form-block">
