задание на 3 неделю

--- a/index.html
+++ b/index.html
@@ -130,9 +130,25 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="burger-slider section">
-            слайдер
-        </section> -->
+        <section class="burger-slider section">
+            <ul class="burger-slider__list">
+                <li class="burger-slider__item">
+                    <div class="left-arrow">
+                        <svg class="scroll-down">
+                            <use xlink:href="icons/sprite.svg#arrow-scroll"></use>
+                        </svg>
+                    </div>
+                </li>
+                <li class="burger-slider__item"></li>
+                <li class="burger-slider__item">
+                    <div class="right-arrow">
+                        <svg class="scroll-down">
+                            <use xlink:href="icons/sprite.svg#arrow-scroll"></use>
+                        </svg>
+                    </div>
+                </li>
+            </ul>
+        </section> 
         <section class="team section">
             <div class="team__content">
                 <h1 class="team__title section-title section-title">Команда</h1>
