изменения по комментариям

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                     </a>
                 </li>
                 <li class="burger-slider__item container">
-                    <ul class="burger-content">
-                        <li class="burger-content__item">
+                    <div class="burger-content">
+                        <div class="burger-content__item">
                             <div class="burger-content-icons">
                                 <div class="composition">
                                     <svg class="burger-icon">
@@ -193,8 +193,8 @@
                             <div class="burger-content__image">
                                     <img class="burger-content__img" src="burgers-slider/black-burger.png" alt="">
                                 </div> 
-                        </li>
-                        <li class="burger-content__item">
+                            </div>
+                        <div class="burger-content__item">
                             <ul class="burger-desc">
                                 <li class="burger-desc__item">
                                     <h1 class="section-title burger-content__title">Dark beef burger</h1>
@@ -215,8 +215,8 @@
                                     </div>    
                                 </li>
                             </ul>   
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="burger-slider__item">
                     <a class="right-arrow">
