задание на 4 неделю

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="team__content">
                 <h1 class="team__title section-title section-title">Команда</h1>
                 <ul class="team__list">
-                    <li class="team__item personal personal--active">
+                    <li class="team__item personal">
                             <div class="personal__name ">Дэниэль Редклиф</div>
                             <div class="personal__submenu ">
                                 <div class="personal__avatar">
@@ -285,7 +285,7 @@
         <section class="menu section ">
             <h1 class="menu__header section-title">Меню</h1>
             <ul class="menu__nav">
-                <li class="menu__nav-item assortment assortment--active">
+                <li class="menu__nav-item assortment">
                     <div class="assortment__item"style=" background-image:url('image/menu-list-1.png');">
                         <span>Для мясоедов</span>
                     </div>
