--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
             </div>
         </section>
         <section class="burger-slider section">
-            <ul class="burger-slider__list">
-                <li class="burger-slider__item">
+            <div class="burger-slider__container container">
+                <div class="burger-slider__arrow">
                     <a class="left-arrow">
                         <svg class="scroll-down scroll-left ">
                             <use xlink:href="icons/sprite.svg#arrow-scroll"></use>
                         </svg>
                     </a>
-                </li>
-                 <li class="burger-slider__item container">
-                    <div class="burger-content slider-item">
+                </div>
+                <ul class="burger-slider__list ">
+                    <li class="burger-slider__item">
                         <div class="burger-content__item">
                             <div class="burger-content-icons">
                                 <div class="composition">
@@ -191,40 +191,40 @@
                                 </div>
                             </div>
                             <div class="burger-content__image">
-                                    <img class="burger-content__img" src="burgers-slider/black-burger.png" alt="">
-                                </div> 
-                            </div>
+                                <img class="burger-content__img" src="burgers-slider/black-burger.png" alt="">
+                            </div> 
+                        </div>
                         <div class="burger-content__item">
-                            <ul class="burger-desc">
-                                <li class="burger-desc__item">
+                            <div class="burger-desc">
+                                <div class="burger-desc__item">
                                     <h1 class="section-title burger-content__title">Dark beef burger</h1>
-                                </li>
-                                <li class="burger-desc__item burger-content__desc">
+                                </div>
+                                <div class="burger-desc__item burger-content__desc">
                                     <p class="burger-content__text">
                                         Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, 
                                         тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
                                         салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
                                     </p>
-                                </li>
-                                <li class="burger-desc__item burger-content__order">
+                                </div>
+                                <div class="burger-desc__item burger-content__order">
                                     <div class="burder-content__price">500<span>рублей</span></div>
 
                                     <div class="burger-order-btn">
                                             <a href="#" class="burger-content__btn btn">Заказать</a>
                                     </div>    
-                                </li>
-                            </ul>   
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </li>              
-                <li class="burger-slider__item">
+                    </li>
+                </ul>  
+                <div class="burger-slider__arrow">
                     <a class="right-arrow">
                         <svg class="scroll-down scroll-right">
                             <use xlink:href="icons/sprite.svg#arrow-scroll"></use>
                         </svg>
                     </a>
-                </li>
-            </ul>
+                </div>   
+            </div>       
         </section> 
         <section class="team section">
             <div class="team__content">
