--- a/index.html
+++ b/index.html
@@ -215,7 +215,99 @@
                                 </div>
                             </div>
                         </div>
-                    </li>
+                    </li> 
+
+                    <li class="burger-slider__item">
+                        <div class="burger-content__item">
+                            <div class="burger-content-icons">
+                                <div class="composition">
+                                    <svg class="burger-icon">
+                                        <use xlink:href="icons/sprite.svg#burger"></use>
+                                    </svg>
+                                    <span class="composition__text">состав</span>
+                                </div>
+                                <div class="ccal">
+                                    <svg class="ccal-icon">
+                                        <use xlink:href="icons/sprite.svg#weight"></use>
+                                    </svg>
+                                    <!-- <div class="ccal__text"> -->
+                                        <span class="ccal__text-count">1200</span>
+                                        <div class="ccal__text-txt">ККАЛ</div>
+                                    <!-- </div> -->
+                                </div>
+                            </div>
+                            <div class="burger-content__image">
+                                <img class="burger-content__img" src="burgers-slider/Chiken burger.png" alt="">
+                            </div> 
+                        </div>
+                        <div class="burger-content__item">
+                            <div class="burger-desc">
+                                <div class="burger-desc__item">
+                                    <h1 class="section-title burger-content__title">Dark beef burger</h1>
+                                </div>
+                                <div class="burger-desc__item burger-content__desc">
+                                    <p class="burger-content__text">
+                                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, 
+                                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                                    </p>
+                                </div>
+                                <div class="burger-desc__item burger-content__order">
+                                    <div class="burder-content__price">500<span>рублей</span></div>
+
+                                    <div class="burger-order-btn">
+                                            <a href="#" class="burger-content__btn btn">Заказать</a>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                    </li> 
+
+                    <li class="burger-slider__item">
+                        <div class="burger-content__item">
+                            <div class="burger-content-icons">
+                                <div class="composition">
+                                    <svg class="burger-icon">
+                                        <use xlink:href="icons/sprite.svg#burger"></use>
+                                    </svg>
+                                    <span class="composition__text">состав</span>
+                                </div>
+                                <div class="ccal">
+                                    <svg class="ccal-icon">
+                                        <use xlink:href="icons/sprite.svg#weight"></use>
+                                    </svg>
+                                    <!-- <div class="ccal__text"> -->
+                                        <span class="ccal__text-count">1200</span>
+                                        <div class="ccal__text-txt">ККАЛ</div>
+                                    <!-- </div> -->
+                                </div>
+                            </div>
+                            <div class="burger-content__image">
+                                <img class="burger-content__img" src="burgers-slider/NYC-Diner-Bacon-Cheeseburger.png" alt="">
+                            </div> 
+                        </div>
+                        <div class="burger-content__item">
+                            <div class="burger-desc">
+                                <div class="burger-desc__item">
+                                    <h1 class="section-title burger-content__title">Dark beef burger</h1>
+                                </div>
+                                <div class="burger-desc__item burger-content__desc">
+                                    <p class="burger-content__text">
+                                        Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, 
+                                        тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком,
+                                        салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+                                    </p>
+                                </div>
+                                <div class="burger-desc__item burger-content__order">
+                                    <div class="burder-content__price">500<span>рублей</span></div>
+
+                                    <div class="burger-order-btn">
+                                            <a href="#" class="burger-content__btn btn">Заказать</a>
+                                    </div>    
+                                </div>
+                            </div>
+                        </div>
+                    </li> 
                 </ul>  
                 <div class="burger-slider__arrow">
                     <a class="right-arrow">
