я вроде близко к правде

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </svg>
                         </a>
                     </div>
-                    <!-- <div class="burger-slider__list-wrap"> -->
+                    <div class="burger-slider__list-wrap">
                         <ul class="burger-slider__list ">
                             <li class="burger-slider__item">
                                 <div class="burger-content__item">
@@ -311,7 +311,7 @@
                                 </div>
                             </li> 
                         </ul>  
-                    <!-- </div> -->
+                    </div>
                     <div class="burger-slider__arrow">
                         <a class="right-arrow">
                             <svg class="scroll-down scroll-right">
